# eldrow

./: .gitignore  pyproject.toml  readme.md
eldrow/: __main__.py  lib.py  strategies.py  wordle.py
tests/: test_eldrow.py  test_strategies.py  test_wordle.py
wordle/: __main__.py  eldrow.py  lib.py  strategies.py  wordle.py
