[tool.poetry]
name = "eldrow"
version = "0.1.0"
description = ""
authors = ["Roshan Giyanani <roshangiyanani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"